erDiagram
    %% Annotations:
    %% 🟢 Module Leader: Users, Roles, Permissions, Role_Permissions, Room_Types
    %% 🔵 Module M1: Bookings, Booking_Details, Vouchers
    %% 🟣 Module M2: Invoices, Payments, Order_Services, Order_Service_Details
    %% 🟡 Module J1: Rooms, Room_Images
    %% 🟠 Module J2: Services, Service_Categories, Amenities, RoomType_Amenities, Memberships
    %% 🟤 Module J3: Articles, Article_Categories, Attractions, Room_Inventory
    %% ⚪ Chưa phân công: Mặc định

    USERS ||--o{ ARTICLES : references
    ARTICLE_CATEGORIES ||--o{ ARTICLES : references
    USERS ||--o{ AUDIT_LOGS : references
    BOOKINGS ||--o{ BOOKING_DETAILS : references
    ROOMS ||--o{ BOOKING_DETAILS : references
    ROOM_TYPES ||--o{ BOOKING_DETAILS : references
    USERS ||--o{ BOOKINGS : references
    VOUCHERS ||--o{ BOOKINGS : references
    BOOKINGS ||--o{ INVOICES : references
    BOOKING_DETAILS ||--o{ LOSS_AND_DAMAGES : references
    ROOM_INVENTORY ||--o{ LOSS_AND_DAMAGES : references
    ORDER_SERVICES ||--o{ ORDER_SERVICE_DETAILS : references
    SERVICES ||--o{ ORDER_SERVICE_DETAILS : references
    BOOKING_DETAILS ||--o{ ORDER_SERVICES : references
    INVOICES ||--o{ PAYMENTS : references
    ROOM_TYPES ||--o{ REVIEWS : references
    USERS ||--o{ REVIEWS : references
    PERMISSIONS ||--o{ ROLE_PERMISSIONS : references
    ROLES ||--o{ ROLE_PERMISSIONS : references
    ROOM_TYPES ||--o{ ROOM_IMAGES : references
    ROOMS ||--o{ ROOM_INVENTORY : references
    ROOM_TYPES ||--o{ ROOMS : references
    AMENITIES ||--o{ ROOMTYPE_AMENITIES : references
    ROOM_TYPES ||--o{ ROOMTYPE_AMENITIES : references
    SERVICE_CATEGORIES ||--o{ SERVICES : references
    MEMBERSHIPS ||--o{ USERS : references
    ROLES ||--o{ USERS : references

    %% 🟠 J2
    AMENITIES {
int id PK
nvarchar name
nvarchar icon_url
    }

    %% 🟤 J3
    ARTICLE_CATEGORIES {
int id PK
nvarchar name
    }

    %% 🟤 J3
    ARTICLES {
int id PK
int category_id FK
int author_id FK
nvarchar title
nvarchar slug
nvarchar content
nvarchar thumbnail_url
datetime published_at
    }

    %% 🟤 J3
    ATTRACTIONS {
int id PK
nvarchar name
decimal distance_km
nvarchar description
nvarchar map_embed_link
    }

    %% ⚪ Chưa phân công
    AUDIT_LOGS {
int id PK
int user_id FK
nvarchar action
nvarchar table_name
int record_id
nvarchar old_value
nvarchar new_value
datetime created_at
    }

    %% 🔵 M1
    BOOKING_DETAILS {
int id PK
int booking_id FK
int room_id FK
int room_type_id FK
datetime check_in_date
datetime check_out_date
decimal price_per_night
    }

    %% 🔵 M1
    BOOKINGS {
int id PK
int user_id FK
nvarchar guest_name
nvarchar guest_phone
nvarchar guest_email
nvarchar booking_code
int voucher_id FK
nvarchar status
    }

    %% 🟣 M2
    INVOICES {
int id PK
int booking_id FK
decimal total_room_amount
decimal total_service_amount
decimal discount_amount
decimal tax_amount
decimal final_total
nvarchar status
    }

    %% ⚪ Chưa phân công
    LOSS_AND_DAMAGES {
int id PK
int booking_detail_id FK
int room_inventory_id FK
int quantity
decimal penalty_amount
nvarchar description
datetime created_at
    }

    %% 🟠 J2
    MEMBERSHIPS {
int id PK
nvarchar tier_name
int min_points
decimal discount_percent
    }

    %% 🟣 M2
    ORDER_SERVICE_DETAILS {
int id PK
int order_service_id FK
int service_id FK
int quantity
decimal unit_price
    }

    %% 🟣 M2
    ORDER_SERVICES {
int id PK
int booking_detail_id FK
datetime order_date
decimal total_amount
nvarchar status
    }

    %% 🟣 M2
    PAYMENTS {
int id PK
int invoice_id FK
nvarchar payment_method
decimal amount_paid
nvarchar transaction_code
datetime payment_date
    }

    %% 🟢 Leader
    PERMISSIONS {
int id PK
nvarchar name
    }

    %% ⚪ Chưa phân công
    REVIEWS {
int id PK
int user_id FK
int room_type_id FK
int rating
nvarchar comment
datetime created_at
    }

    %% 🟢 Leader
    ROLE_PERMISSIONS {
int role_id PK FK
int permission_id PK FK
    }

    %% 🟢 Leader
    ROLES {
int id PK
nvarchar name
nvarchar description
    }

    %% 🟡 J1
    ROOM_IMAGES {
int id PK
int room_type_id FK
nvarchar image_url
bit is_primary
    }

    %% 🟤 J3
    ROOM_INVENTORY {
int id PK
int room_id FK
nvarchar item_name
int quantity
decimal price_if_lost
    }

    %% 🟢 Leader
    ROOM_TYPES {
int id PK
nvarchar name
decimal base_price
int capacity_adults
int capacity_children
nvarchar description
    }

    %% 🟡 J1
    ROOMS {
int id PK
int room_type_id FK
nvarchar room_number
int floor
nvarchar status
    }

    %% 🟠 J2
    ROOMTYPE_AMENITIES {
int room_type_id PK FK
int amenity_id PK FK
    }

    %% 🟠 J2
    SERVICE_CATEGORIES {
int id PK
nvarchar name
    }

    %% 🟠 J2
    SERVICES {
int id PK
int category_id FK
nvarchar name
decimal price
nvarchar unit
    }

    %% 🟢 Leader
    USERS {
int id PK
int role_id FK
int membership_id FK
nvarchar full_name
nvarchar email
nvarchar phone
nvarchar password_hash
bit status
    }

    %% 🔵 M1
    VOUCHERS {
int id PK
nvarchar code
nvarchar discount_type
decimal discount_value
decimal min_booking_value
datetime valid_from
datetime valid_to
int usage_limit
    }
